<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cards Against Humanity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_play_game">Play Game</string>
    <string name="button_how_to_play">How To Play</string>
    <string name="button_dirty_deck">\"Dirty\" Deck</string>
    <string name="button_clean_deck">\"Clean\" Deck</string>
    <string name="button_create_game">Create Game</string>
    <string name="black_card_placeholder">In an attempt to reach a wider audience, the Smithsonian Museum of Natural History has opened an interactive exhibit on _____.</string>
    <string name="black_card_read_prompt">Tap the card to continue.</string>
    <string name="black_card_expand">View\n Black\n Card</string>
    <string name="spinner_num_players">Choose the number of players</string>
    <string name="spinner_max_awesome_points">Choose the maximum number of Awesome Points</string>
    <string name="text_dirty_deck">Full, uncensored card deck. Must be 18+.</string>
    <string name="text_clean_deck">No profane cards. Fun for all ages!</string>
    <string name="text_version_prompt">Please select your Deck</string>
    <string name="text_num_players">Number of Players</string>
    <string name="text_max_awesome_points">Maximum Awesome Points</string>
    <string name="text_current_player_number">Player</string>
    <string name="text_current_player_points">Awesome Points</string>
    <string name="text_current_submitted_cards">Submitted Cards</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="title_activity_how_to_play">How To Play</string>
    <string name="title_activity_version_selection">Version Selection</string>
    <string name="title_activity_game_setup">Game Setup</string>
    <string name="title_activity_card_czar_read">Card Czar Read</string>
    <string name="title_activity_player_card_selection">Player Card Selection</string>
    <string name="title_activity_card_czar_select">Card Czar Selection</string>
    <string name="white_card_placeholder">Saying "I disapprove of what you say, but I will defend to the death your right to say it" when you know you wouldn\'t</string>
    <string name="white_card_player_select_prompt">Long press your card(s) to submit them.</string>
    <string name="white_card_cz_select_prompt">Long press a player\'s card(s) to select them.</string>
    <string name="HTP_placeholder1">To start the game, each player draws ten White Cards.</string>
    <string name="HTP_placeholder2">Player 1 goes first. The order is determined by the players.</string>
    <string name="HTP_placeholder3">Everyone else answers the question by passing one or two white cards, face down, to the Card Czar.</string>
    <string name="HTP_placeholder4">The Card Czar will shuffle all of the answers and shares each card combination with the group. For full effect re-read the Black Card before presenting each answer.</string>
    <string name="HTP_placeholder5">The Card Czar will then select the funniest cards and whomever submitted the card receives an Awesome Point!</string>
    <string name="HTP_placeholder6">After the round, a new player becomes the Card Czar, and everyone draws back up to ten White Cards.</string>
    <string name="HTP_placeholder7">Some black cards require the players to pick 2 white cards:</string>
    <string name="HTP_placeholder8">To answer these, each player plays two White Cards in combination.</string>
    <string name="HTP_placeholder9">The cards must be played in the order the Card Czar should read them.</string>

    <string-array name="array_num_players">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="array_max_awesome_points">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

</resources>
