<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cardsagainsthumanity.app.VersionSelection">

    <View
        android:id="@+id/anchor"
        android:layout_width="256dp"
        android:layout_height="64dp"
        android:layout_centerInParent="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_dirty_deck"
        android:id="@+id/btnDirty"
        android:layout_alignParentTop="false"
        android:layout_centerInParent="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="false"
        android:layout_above="@+id/anchor"
        android:layout_alignLeft="@+id/anchor"
        android:layout_alignRight="@+id/anchor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/text_dirty_deck"
        android:id="@+id/txtDirty"
        android:layout_below="@+id/btnDirty"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/btnDirty"
        android:layout_alignRight="@+id/btnDirty"
        android:editable="false"
        android:enabled="false"
        android:gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_clean_deck"
        android:id="@+id/btnClean"
        android:layout_centerInParent="true"
        android:layout_below="@+id/anchor"
        android:layout_alignLeft="@+id/anchor"
        android:layout_alignRight="@+id/anchor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/text_clean_deck"
        android:id="@+id/txtClean"
        android:layout_below="@+id/btnClean"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/btnClean"
        android:layout_alignRight="@+id/btnClean"
        android:editable="false"
        android:enabled="false"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_version_prompt"
        android:id="@+id/txtPrompt"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_above="@+id/btnDirty"
        android:textStyle="bold"
        android:textSize="28sp" />

</RelativeLayout>


