<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cardsagainsthumanity.app.GameSetup">

    <View
        android:id="@+id/anchor"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_centerInParent="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_num_players"
        android:id="@+id/txtNumPlayers"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:gravity="center"
        android:layout_alignBottom="@+id/spinnerNumPlayers"
        android:layout_alignTop="@+id/spinnerNumPlayers" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/spinner_num_players"
        android:entries="@array/array_num_players"
        android:id="@+id/spinnerNumPlayers"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="true"
        android:spinnerMode="dialog"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_marginBottom="32dp"
        android:layout_above="@+id/spinnerMaxAwesomePoints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_max_awesome_points"
        android:id="@+id/txtMaxAwesomePoints"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:gravity="center"
        android:layout_alignBottom="@+id/spinnerMaxAwesomePoints"
        android:layout_alignTop="@+id/spinnerMaxAwesomePoints" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/spinner_max_awesome_points"
        android:entries="@array/array_max_awesome_points"
        android:id="@+id/spinnerMaxAwesomePoints"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:spinnerMode="dialog"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_marginBottom="32dp"
        android:layout_alignLeft="@+id/spinnerNumPlayers"
        android:layout_above="@+id/anchor" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_create_game"
        android:id="@+id/btnCreateGame"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/anchor"
        android:layout_marginTop="32dp" />

</RelativeLayout>


