<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cardsagainsthumanity.app.MainMenu">

    <View
        android:id="@+id/anchor"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_centerInParent="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_play_game"
        android:id="@+id/btnPlayGame"
        android:layout_alignParentTop="false"
        android:layout_centerInParent="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="false"
        android:layout_above="@+id/anchor"
        android:layout_alignLeft="@+id/btnHowToPlay"
        android:layout_alignRight="@+id/btnHowToPlay" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_how_to_play"
        android:id="@+id/btnHowToPlay"
        android:layout_centerInParent="true"
        android:layout_below="@+id/anchor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/txtPrompt"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginBottom="64dp"
        android:layout_above="@+id/btnPlayGame" />

</RelativeLayout>
