<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cardsagainsthumanity.app.PlayerCardSelection">

    <ImageView
        android:layout_width="96dp"
        android:layout_height="120dp"
        android:id="@+id/imgBlackCardSmall"
        android:src="@drawable/blackcard"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true" />

    <TextView
        android:text="@string/text_current_player_number"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="left"
        android:id="@+id/txtCurrentPlayerNum"
        android:layout_height="64dp"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@+id/imgBlackCardSmall"
        android:layout_alignTop="@+id/imgBlackCardSmall"
        android:layout_marginLeft="32dp"
        android:gravity="center_vertical" />

    <TextView
        android:text="@string/text_current_player_points"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="left"
        android:id="@+id/txtCurrentPlayerPoints"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginLeft="32dp"
        android:gravity="center_vertical"
        android:layout_alignBottom="@+id/imgBlackCardSmall"
        android:layout_toRightOf="@+id/imgBlackCardSmall" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/white_card_prompt"
        android:id="@+id/txtPrompt"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalScrollView"
        android:layout_toEndOf="@+id/horizontalScrollView"
        android:fillViewport="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop = "120dp"
        android:layout_marginBottom ="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="268dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_height="268dp"
                    android:layout_width="338dp"
                    android:id="@+id/imageView"
                    android:src="@drawable/whitecard"
                    android:adjustViewBounds="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/white_card_placeholder"
                    android:id="@+id/txtWhiteCard"
                    android:layout_alignTop="@+id/imageView"
                    android:layout_alignLeft="@+id/imageView"
                    android:layout_alignRight="@+id/imageView"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="77dp"
                    android:width="200dp"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="268dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_height="268dp"
                    android:layout_width="338dp"
                    android:id="@+id/imageView2"
                    android:src="@drawable/whitecard"
                    android:adjustViewBounds="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/white_card_placeholder"
                    android:id="@+id/txtWhiteCard2"
                    android:layout_alignTop="@+id/imageView2"
                    android:layout_alignLeft="@+id/imageView2"
                    android:layout_alignRight="@+id/imageView2"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="77dp"
                    android:width="200dp"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="268dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_height="268dp"
                    android:layout_width="338dp"
                    android:id="@+id/imageView3"
                    android:src="@drawable/whitecard"
                    android:adjustViewBounds="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/white_card_placeholder"
                    android:id="@+id/txtWhiteCard3"
                    android:layout_alignTop="@+id/imageView3"
                    android:layout_alignLeft="@+id/imageView3"
                    android:layout_alignRight="@+id/imageView3"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="77dp"
                    android:width="200dp"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="268dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_height="268dp"
                    android:layout_width="338dp"
                    android:id="@+id/imageView4"
                    android:src="@drawable/whitecard"
                    android:adjustViewBounds="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/white_card_placeholder"
                    android:id="@+id/txtWhiteCard4"
                    android:layout_alignTop="@+id/imageView4"
                    android:layout_alignLeft="@+id/imageView4"
                    android:layout_alignRight="@+id/imageView4"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="77dp"
                    android:width="200dp"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="268dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_height="268dp"
                    android:layout_width="338dp"
                    android:id="@+id/imageView5"
                    android:src="@drawable/whitecard"
                    android:adjustViewBounds="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/white_card_placeholder"
                    android:id="@+id/txtWhiteCard5"
                    android:layout_alignTop="@+id/imageView5"
                    android:layout_alignLeft="@+id/imageView5"
                    android:layout_alignRight="@+id/imageView5"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="77dp"
                    android:width="200dp"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="268dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_height="268dp"
                    android:layout_width="338dp"
                    android:id="@+id/imageView6"
                    android:src="@drawable/whitecard"
                    android:adjustViewBounds="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/white_card_placeholder"
                    android:id="@+id/txtWhiteCard6"
                    android:layout_alignTop="@+id/imageView6"
                    android:layout_alignLeft="@+id/imageView6"
                    android:layout_alignRight="@+id/imageView6"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="77dp"
                    android:width="200dp"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="268dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_height="268dp"
                    android:layout_width="338dp"
                    android:id="@+id/imageView7"
                    android:src="@drawable/whitecard"
                    android:adjustViewBounds="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/white_card_placeholder"
                    android:id="@+id/txtWhiteCard7"
                    android:layout_alignTop="@+id/imageView7"
                    android:layout_alignLeft="@+id/imageView7"
                    android:layout_alignRight="@+id/imageView7"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="77dp"
                    android:width="200dp"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="268dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_height="268dp"
                    android:layout_width="338dp"
                    android:id="@+id/imageView8"
                    android:src="@drawable/whitecard"
                    android:adjustViewBounds="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/white_card_placeholder"
                    android:id="@+id/txtWhiteCard8"
                    android:layout_alignTop="@+id/imageView8"
                    android:layout_alignLeft="@+id/imageView8"
                    android:layout_alignRight="@+id/imageView8"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="77dp"
                    android:width="200dp"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="268dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_height="268dp"
                    android:layout_width="338dp"
                    android:id="@+id/imageView9"
                    android:src="@drawable/whitecard"
                    android:adjustViewBounds="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/white_card_placeholder"
                    android:id="@+id/txtWhiteCard9"
                    android:layout_alignTop="@+id/imageView9"
                    android:layout_alignLeft="@+id/imageView9"
                    android:layout_alignRight="@+id/imageView9"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="77dp"
                    android:width="200dp"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="268dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_height="268dp"
                    android:layout_width="338dp"
                    android:id="@+id/imageView10"
                    android:src="@drawable/whitecard"
                    android:adjustViewBounds="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/white_card_placeholder"
                    android:id="@+id/txtWhiteCard10"
                    android:layout_alignTop="@+id/imageView10"
                    android:layout_alignLeft="@+id/imageView10"
                    android:layout_alignRight="@+id/imageView10"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="77dp"
                    android:width="200dp"/>

            </FrameLayout>

        </LinearLayout>

    </HorizontalScrollView>

</RelativeLayout>
